sample/asm/errors/empty_block_body.asm
.block: foo
.end

.function: main
    izero 0
    return
.end
